api/deploy/kubernetes/objects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: registry.gitlab.com/kclhi/reflect/api:latest
        volumeMounts:
          - name: DB_SECRET 
            mountPath: "/var/tls/DB_SECRET"
            readOnly: true
          - name: DB_PASS_SECRET 
            mountPath: "/var/credentials/DB_PASS_SECRET"
            readOnly: true
        ports:
        - containerPort: 3000
      volumes:
        - name: DB_SECRET 
          secret:
            secretName: DB_SECRET 
        - name: DB_PASS_SECRET 
          secret:
            secretName: DB_PASS_SECRET
